# gradlib

./: README.md  pyproject.toml
src/gradlib/: __init__.py  tensor.py  value.py
tests/tensor/: test_tensor_add.py  test_tensor_dot.py  test_tensor_grad.py  test_tensor_matmul.py  test_tensor_matvecproduct.py  test_tensor_multiply.py  test_tensor_shape.py  test_tensor_sum.py  test_tensor_transpose.py
tests/value/: test_value_add.py  test_value_multiply.py
